# 0-code

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  README.md  REVIEW.md  ZERO.md
crates/zero-agents/: Cargo.toml
crates/zero-agents/src/: agent_tool.rs  coordinator.rs  lib.rs  sub_agent.rs  team.rs  types.rs
crates/zero-cli/: Cargo.toml
crates/zero-cli/src/: main.rs
crates/zero-cli/tests/: startup.rs
crates/zero-context/: Cargo.toml
crates/zero-context/src/: compaction.rs  file_cache.rs  lib.rs  manager.rs  memory.rs  types.rs
crates/zero-core/: Cargo.toml
crates/zero-core/src/: config.rs  engine.rs  error.rs  lib.rs  session.rs
crates/zero-core/tests/: integration.rs
crates/zero-hooks/: Cargo.toml
crates/zero-hooks/src/: engine.rs  lib.rs  types.rs
crates/zero-llm/: Cargo.toml
crates/zero-llm/src/: error.rs  lib.rs  messages_api.rs  openai.rs  provider.rs  types.rs
crates/zero-mcp/: Cargo.toml
crates/zero-mcp/src/: client.rs  lib.rs  stdio.rs  transport.rs  types.rs
crates/zero-perms/: Cargo.toml
crates/zero-perms/src/: lib.rs  manager.rs  pipeline.rs  rules.rs  tracker.rs  types.rs
crates/zero-protocol/: Cargo.toml
crates/zero-protocol/src/: ads.rs  dex.rs  error.rs  lib.rs  oracle.rs  types.rs  verify.rs
crates/zero-skills/: Cargo.toml
crates/zero-skills/src/: lib.rs  loader.rs  matcher.rs  types.rs
crates/zero-tools/: Cargo.toml
crates/zero-tools/src/: lib.rs  registry.rs  tool.rs  types.rs
crates/zero-tools/src/core/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  mod.rs  register.rs  web_fetch.rs  web_search.rs
crates/zero-tui/: Cargo.toml
crates/zero-tui/src/: app.rs  event.rs  lib.rs  run.rs  ui.rs
research/: competitive-landscape.md
tasks/: todo.md
