[package]
name = "zero-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
zero-core = { path = "../zero-core" }
zero-tools = { path = "../zero-tools" }
zero-llm = { path = "../zero-llm" }
