[package]
name = "zero-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
